@@ -7,6 +7,7 @@
 
 package com.powsybl.openrao.searchtreerao.searchtree.algorithms;
 
+import com.powsybl.commons.report.ReportNode;
 import com.powsybl.openrao.data.crac.api.networkaction.NetworkAction;
 import com.powsybl.openrao.searchtreerao.commons.NetworkActionCombination;
 import com.powsybl.openrao.searchtreerao.result.api.OptimizationResult;
@@ -34,7 +35,9 @@ public class AlreadyTestedCombinationsFilter implements NetworkActionCombination
      * already selected in the previous depths.
      */
     @Override
-    public Set<NetworkActionCombination> filter(Set<NetworkActionCombination> naCombinations, OptimizationResult optimizationResult) {
+    public Set<NetworkActionCombination> filter(final Set<NetworkActionCombination> naCombinations,
+                                                final OptimizationResult optimizationResult,
+                                                final ReportNode reportNode) {
         List<NetworkAction> alreadyTestedNetworkActions = new ArrayList<>();
 
         for (NetworkActionCombination preDefinedCombination : preDefinedNaCombinations) {
@@ -50,7 +53,7 @@ public class AlreadyTestedCombinationsFilter implements NetworkActionCombination
             // if all the actions of the combinations have been selected but one, there is no need
             // to test that individual action anymore
             if (notTestedNaInCombination.size() == 1) {
-                alreadyTestedNetworkActions.add(notTestedNaInCombination.get(0));
+                alreadyTestedNetworkActions.add(notTestedNaInCombination.getFirst());
             }
         }
 
